--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -17,10 +17,12 @@
   },
   "chatbot": {
     "open": "تحدث معنا",
-    "title": "مساعد Matex",
+    "buttonText": "تحدث مع مساعد Matex للذكاء الاصطناعي",
+    "title": "مساعد Matex للذكاء الاصطناعي والتعلم الآلي",
     "showSuggestions": "عرض الاقتراحات",
-    "close": "إغلاق المحادثة",
-    "placeholder": "اكتب رسالتك...",
+    "close": "إغلاق",
+    "closeChat": "إغلاق المحادثة",
+    "placeholder": "اسألني عن خدمات Matex أو المؤسس أو معلومات الاتصال...",
     "greeting": "مرحباً! أنا مساعد Matex. أستطيع مساعدتك في:\n\n• معلومات عن Matex\n• خدماتنا وحلولنا\n• مواقع المكاتب\n• معلومات الاتصال\n• فرص العمل\n• التقنيات المستخدمة\n• حجز استشارة\n\nما الذي ترغب بمعرفته؟",
     "suggestions": {
       "about": "أخبرني عن Matex",
@@ -28,9 +30,9 @@
       "locations": "أين تقع مكاتبكم؟",
       "contact": "كيف يمكنني التواصل معكم؟",
       "careers": "فرص العمل",
-      "consult": "حجز استشارة",
-      "contactSales": "الاتصال بالمبيعات"
+      "consult": "حجز استشارة"
     },
+    "contactSales": "الاتصال بالمبيعات",
     "fallback": {
       "price": "للاطلاع على الأسعار، يرجى تزويدنا بتفاصيل مشروعك وسنقدم عرض سعر.",
       "services": "نحن نقدم حلول الذكاء الاصطناعي، وتطوير البرمجيات، وخدمات السحابة، والاستشارات.",
