--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,10 +17,12 @@
   },
   "chatbot": {
     "open": "Chat with us",
-    "title": "Matex Assistant",
-    "showSuggestions": "Show suggestions",
-    "close": "Close chat",
-    "placeholder": "Type your message...",
+    "buttonText": "Chat with Matex AI",
+    "title": "Matex ML AI Assistant",
+    "showSuggestions": "Show Suggestions",
+    "close": "Close",
+    "closeChat": "Close chat",
+    "placeholder": "Ask me about Matex services, founder, or contact info...",
     "greeting": "Hello! I'm the Matex Assistant. I can help you with:\n\n• Information about Matex\n• Our services and solutions\n• Office locations\n• Contact information\n• Career opportunities\n• Technology stack\n• Schedule a consultation\n\nWhat would you like to know?",
     "suggestions": {
       "about": "Tell me about Matex",
@@ -36,7 +38,7 @@
       "contact": "You can reach us at contact@matex.com or +1 (234) 567-890.",
       "generic": "I'm here to help with Matex information. Could you tell me a bit more about what you need?"
     },
-    "suggestions": {"contactSales": "Contact sales"},
+    "contactSales": "Contact Sales",
     "leadName": "Your name",
     "leadEmail": "Your email",
     "leadCompany": "Company (optional)",
