--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -180,7 +180,7 @@
   },
   "footer": {
     "contact": "Contact Us",
-    "email": "almestrahmohammad@gmail.com",
+    "email": "contact@matexsolution.com",
     "phone": "+961 76162549",
     "follow": "Follow Us",
     "newsletter": "Newsletter",
@@ -214,19 +214,19 @@
       "lebanon": {
         "address": "Baabda, Mount Lebanon",
         "postal": "Lebanon",
-        "email": "almestrahmohammad@gmail.com",
+        "email": "contact@matexsolution.com",
         "phone": "+961 76162549"
       },
       "turkey": {
         "address": "Istanbul, Turkey",
         "postal": "Turkey",
-        "email": "almestrahmohammad@gmail.com",
+        "email": "contact@matexsolution.com",
         "phone": "+961 76162549"
       },
       "france": {
         "address": "Paris, France",
         "postal": "France",
-        "email": "almestrahmohammad@gmail.com",
+        "email": "contact@matexsolution.com",
         "phone": "+961 76162549"
       }
     }
