--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -161,7 +161,7 @@
   },
   "footer": {
     "contact": "Contactez-nous",
-    "email": "almestrahmohammad@gmail.com",
+    "email": "contact@matexsolution.com",
     "phone": "+961 76162549",
     "follow": "Suivez-nous",
     "newsletter": "Newsletter",
@@ -195,19 +195,19 @@
       "lebanon": {
         "address": "Baabda, Mont Liban",
         "postal": "Liban",
-        "email": "almestrahmohammad@gmail.com",
+        "email": "contact@matexsolution.com",
         "phone": "+961 76162549"
       },
       "turkey": {
         "address": "Istanbul, Turquie",
         "postal": "Turquie",
-        "email": "almestrahmohammad@gmail.com",
+        "email": "contact@matexsolution.com",
         "phone": "+961 76162549"
       },
       "france": {
         "address": "Paris, France",
         "postal": "France",
-        "email": "almestrahmohammad@gmail.com",
+        "email": "contact@matexsolution.com",
         "phone": "+961 76162549"
       }
     }
