--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -6,6 +6,7 @@
     "clients": "العملاء",
     "careers": "الوظائف",
     "profile": "الملف الشخصي",
+    "faq": "الأسئلة الشائعة",
     "auth": {
       "signIn": "تسجيل الدخول",
       "signOut": "تسجيل الخروج"
@@ -176,6 +177,40 @@
       "title": "هل أنت مستعد لبدء مشروعك؟",
       "subtitle": "دعنا نناقش كيف يمكن لخبرتنا في إدارة المشاريع أن تضمن نجاح مبادرتك التقنية.",
       "button": "جدولة استشارة"
+    },
+    "testimonials": {
+      "title": "ماذا يقول عملاؤنا",
+      "subtitle": "لا تأخذ كلمتنا فقط - استمع إلى الشركات التي ساعدناها على التحول",
+      "items": [
+        {
+          "name": "سارة جونسون",
+          "role": "مديرة التكنولوجيا",
+          "company": "TechCorp",
+          "content": "حولت Matex بنيتنا التحتية التقنية بالكامل. ساعدتنا حلول الذكاء الاصطناعي الخاصة بهم على أتمتة العمليات وزيادة الكفاءة بنسبة 40%. الفريق محترف ومتجاوب ويفهم حقاً احتياجات الأعمال.",
+          "rating": 5
+        },
+        {
+          "name": "أحمد المنصوري",
+          "role": "المؤسس",
+          "company": "InnovateME",
+          "content": "كان العمل مع Matex نقطة تحول. لقد سلموا تطبيقنا المحمول قبل الموعد المحدد وتجاوزوا جميع التوقعات. خبرتهم في الذكاء الاصطناعي وتطوير البرمجيات لا مثيل لها.",
+          "rating": 5
+        },
+        {
+          "name": "ماري دوبوا",
+          "role": "مديرة المنتج",
+          "company": "Digital Solutions",
+          "content": "كان مشروع الهجرة إلى السحابة سلساً بفضل Matex. تعاملوا مع كل شيء من التخطيط إلى التنفيذ بلا عيوب. أنظمتنا الآن أكثر قابلية للتوسع وفعالية من حيث التكلفة.",
+          "rating": 5
+        },
+        {
+          "name": "ديفيد تشن",
+          "role": "الرئيس التنفيذي",
+          "company": "StartupHub",
+          "content": "ساعدتنا خدمات الاستشارات في Matex على اتخاذ قرارات تقنية حاسمة. كانت إرشاداتهم الاستراتيجية لا تقدر بثمن، ولاحظنا نمواً كبيراً منذ تنفيذ توصياتهم.",
+          "rating": 5
+        }
+      ]
     }
   },
   "footer": {
@@ -188,7 +223,102 @@
     "subscribe": "اشترك",
     "quickLinks": "روابط سريعة",
     "rights": "جميع الحقوق محفوظة.",
-    "about": "من نحن"
+    "about": "من نحن",
+    "newsletter": {
+      "success": "تم الاشتراك بنجاح! تحقق من بريدك الإلكتروني للتأكيد.",
+      "error": "يرجى إدخال عنوان بريد إلكتروني صحيح."
+    }
+  },
+  "faq": {
+    "hero": {
+      "title": "الأسئلة الشائعة",
+      "subtitle": "ابحث عن إجابات للأسئلة الشائعة حول خدماتنا وأسعارنا والمزيد"
+    },
+    "search": {
+      "placeholder": "ابحث عن الأسئلة...",
+      "results": "تم العثور على {{count}} نتيجة",
+      "noResults": "لم يتم العثور على نتائج. جرب كلمات مفتاحية أخرى."
+    },
+    "categories": {
+      "services": {
+        "title": "الخدمات",
+        "questions": [
+          {
+            "q": "ما هي الخدمات التي تقدمها Matex؟",
+            "a": "تقدم Matex حلولاً تقنية شاملة تشمل خدمات الذكاء الاصطناعي والتعلم الآلي، وتطوير البرمجيات المخصصة، وحلول البنية التحتية السحابية، والاستشارات التقنية."
+          },
+          {
+            "q": "هل تقومون بتطوير تطبيقات الهاتف المحمول؟",
+            "a": "نعم، نقوم بتطوير تطبيقات الهاتف المحمول الأصلية ومتعددة المنصات لنظامي iOS و Android."
+          },
+          {
+            "q": "ما هي التقنيات التي تستخدمونها؟",
+            "a": "نستخدم تقنيات حديثة تشمل React و Node.js و Python و TypeScript و AWS و Docker و Kubernetes وأطر عمل الذكاء الاصطناعي/التعلم الآلي المختلفة."
+          },
+          {
+            "q": "هل يمكنكم المساعدة في الهجرة إلى السحابة؟",
+            "a": "بالتأكيد! نقدم خدمات شاملة للهجرة إلى السحابة، مما يساعد الشركات على الانتقال إلى AWS أو Google Cloud أو Azure."
+          }
+        ]
+      },
+      "pricing": {
+        "title": "التسعير",
+        "questions": [
+          {
+            "q": "كم تكلف خدماتكم؟",
+            "a": "تختلف الأسعار حسب نطاق المشروع وتعقيده ومتطلباته. نقدم عروض أسعار مخصصة مصممة لكل مشروع."
+          },
+          {
+            "q": "هل تقدمون خطط دفع؟",
+            "a": "نعم، نقدم خطط دفع مرنة للمشاريع الأكبر."
+          }
+        ]
+      },
+      "careers": {
+        "title": "الوظائف",
+        "questions": [
+          {
+            "q": "ما هي الوظائف المتاحة حالياً؟",
+            "a": "ننشر بانتظام الوظائف المفتوحة على صفحة الوظائف لدينا، بما في ذلك الوظائف بدوام كامل والتدريب."
+          },
+          {
+            "q": "هل تقدمون العمل عن بُعد؟",
+            "a": "نعم، العديد من وظائفنا تقدم خيارات العمل عن بُعد."
+          }
+        ]
+      },
+      "contact": {
+        "title": "الاتصال والدعم",
+        "questions": [
+          {
+            "q": "كيف يمكنني الاتصال بـ Matex؟",
+            "a": "يمكنك التواصل معنا عبر البريد الإلكتروني على contact@matexsolution.com أو الاتصال بنا على +961 76162549."
+          },
+          {
+            "q": "أين تقع مكاتبكم؟",
+            "a": "لدينا مكاتب في بعبدا، جبل لبنان (لبنان) وباريس، فرنسا."
+          }
+        ]
+      },
+      "technical": {
+        "title": "تقني",
+        "questions": [
+          {
+            "q": "هل تقدمون الدعم والصيانة المستمرة؟",
+            "a": "نعم، نقدم خدمات دعم وصيانة شاملة لجميع مشاريعنا."
+          },
+          {
+            "q": "ما هي منهجية التطوير الخاصة بكم؟",
+            "a": "نتبع منهجيات التطوير الرشيقة، باستخدام أطر عمل Scrum و Kanban."
+          }
+        ]
+      }
+    },
+    "cta": {
+      "title": "لا تزال لديك أسئلة؟",
+      "subtitle": "لا تجد ما تبحث عنه؟ تواصل مع فريقنا.",
+      "button": "اتصل بنا"
+    }
   },
   "about": {
     "hero": {
