--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -218,7 +218,7 @@
     "email": "contact@matexsolution.com",
     "phone": "+961 76162549",
     "follow": "تابعنا",
-    "newsletter": "النشرة الإخبارية",
+    "newsletterTitle": "النشرة الإخبارية",
     "emailPlaceholder": "أدخل بريدك الإلكتروني",
     "subscribe": "اشترك",
     "quickLinks": "روابط سريعة",
