--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -218,7 +218,7 @@
     "email": "contact@matexsolution.com",
     "phone": "+961 76162549",
     "follow": "Follow Us",
-    "newsletter": "Newsletter",
+    "newsletterTitle": "Newsletter",
     "emailPlaceholder": "Enter your email",
     "subscribe": "Subscribe",
     "quickLinks": "Quick Links",
