--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -199,7 +199,7 @@
     "email": "contact@matexsolution.com",
     "phone": "+961 76162549",
     "follow": "Suivez-nous",
-    "newsletter": "Newsletter",
+    "newsletterTitle": "Newsletter",
     "emailPlaceholder": "Entrez votre email",
     "subscribe": "S'abonner",
     "quickLinks": "Liens Rapides",
