--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -79,7 +79,8 @@
       "web": "تطوير مواقع الويب",
       "mobile": "تطبيق جوال",
       "design": "تصميم واجهات المستخدم",
-      "consulting": "استشارات"
+      "consulting": "استشارات",
+      "marketing": "التسويق ووسائل التواصل الاجتماعي"
     },
     "projectDescription": "وصف المشروع",
     "budgetTimeline": "الميزانية والمدة",
@@ -382,6 +383,10 @@
       "consulting": {
         "title": "الاستشارات التكنولوجية",
         "description": "توجيه خبير للتحول الرقمي"
+      },
+      "marketing": {
+        "title": "التسويق ووسائل التواصل الاجتماعي",
+        "description": "إعلانات تسويقية احترافية، دفعات على وسائل التواصل الاجتماعي، وإدارة الحملات لإنستغرام وفيسبوك وجميع منصات وسائل التواصل الاجتماعي الرئيسية"
       }
     }
   },
