--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -37,7 +37,7 @@
     "fallback": {
       "price": "للاطلاع على الأسعار، يرجى تزويدنا بتفاصيل مشروعك وسنقدم عرض سعر.",
       "services": "نحن نقدم حلول الذكاء الاصطناعي، وتطوير البرمجيات، وخدمات السحابة، والاستشارات.",
-      "contact": "يمكنك التواصل معنا عبر almestrahmohammad@gmail.com أو +961 76162549.",
+      "contact": "يمكنك التواصل معنا عبر contact@matexsolution.com أو +961 76162549.",
       "generic": "أنا هنا للمساعدة بمعلومات Matex. هل يمكنك توضيح ما تحتاجه؟"
     },
     "leadName": "اسمك",
@@ -143,7 +143,7 @@
   "home": {
     "hero": {
       "title": "التميز في إدارة المشاريع التقنية",
-      "subtitle": "تأسست على يد محمد المسطرح، نحن متخصصون في إدارة المشاريع التقنية المعقدة في مجالات الذكاء الاصطناعي والتصميم وتطوير الويب والموبايل، مما يضمن التسليم الناجح والقيمة التجارية.",
+      "subtitle": "تأسست على يد محمد المستراح، نحن متخصصون في إدارة المشاريع التقنية المعقدة في مجالات الذكاء الاصطناعي والتصميم وتطوير الويب والموبايل، مما يضمن التسليم الناجح والقيمة التجارية.",
       "cta": {
         "services": "خدماتنا",
         "projects": "عرض المشاريع"
@@ -324,14 +324,14 @@
   "about": {
     "hero": {
       "title": "عن Matex",
-      "description": "تأسست على يد محمد المسطرح، نحن رواد في الابتكار في مجال الذكاء الاصطناعي والبرمجيات"
+      "description": "تأسست على يد محمد المستراح، نحن رواد في الابتكار في مجال الذكاء الاصطناعي والبرمجيات"
     },
     "founder": {
       "title": "مؤسسنا",
-      "description1": "أسس محمد المسطرح شركة Matex برؤية لتحويل الأعمال من خلال حلول تكنولوجية مبتكرة.",
+      "description1": "أسس محمد المستراح شركة Matex برؤية لتحويل الأعمال من خلال حلول تكنولوجية مبتكرة.",
       "description2": "مع خبرة واسعة في الذكاء الاصطناعي وهندسة البرمجيات، يقود فريقنا في تقديم حلول متطورة.",
       "role": "الرئيس التنفيذي والمؤسس",
-      "name": "محمد المسطرح",
+      "name": "محمد المستراح",
       "stats": {
         "experts": "أعضاء الفريق",
         "projects": "مشروع منجز",
@@ -399,7 +399,7 @@
     "testimonials": {
       "title": "آراء العملاء",
       "quote": "قامت Matex بتحويل أعمالنا من خلال حلول الذكاء الاصطناعي المبتكرة.",
-      "author": "محمد المسطرح",
+      "author": "محمد المستراح",
       "position": "الرئيس التنفيذي والمؤسس"
     }
   },
