--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -36,7 +36,7 @@
     "fallback": {
       "price": "For pricing, please share your project details and we'll provide a quote.",
       "services": "We provide AI solutions, software development, cloud services, and consulting.",
-      "contact": "You can reach us at almestrahmohammad@gmail.com or +961 76162549.",
+      "contact": "You can reach us at contact@matexsolution.com or +961 76162549.",
       "generic": "I'm here to help with Matex information. Could you tell me a bit more about what you need?"
     },
     "contactSales": "Contact Sales",
