--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -82,7 +82,7 @@
     "fallback": {
       "price": "Pour les prix, veuillez partager les détails de votre projet et nous fournirons un devis.",
       "services": "Nous proposons des solutions IA, le développement logiciel, des services cloud et du conseil.",
-      "contact": "Vous pouvez nous joindre à almestrahmohammad@gmail.com ou +961 76162549.",
+      "contact": "Vous pouvez nous joindre à contact@matexsolution.com ou +961 76162549.",
       "generic": "Je suis là pour vous aider avec les informations Matex. Pouvez-vous préciser votre besoin ?"
     },
     "leadName": "Votre nom",
